--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,6 +7,10 @@ body {
     height: 70vh;
 }
 
+h5 {
+    padding-bottom: 10px;
+}
+
 .card-title {
     text-overflow: ellipsis;
     overflow: hidden;
